fix:overflow:hidden, main-footer之下的iframe

--- a/s20231121_pra_丙級/web00/style.css
+++ b/s20231121_pra_丙級/web00/style.css
@@ -1,7 +1,8 @@
 *{
-    margin:0;
+    /* margin:0; */
     box-sizing: border-box;
     font-family:'標楷體';
+    overflow: hidden;
 }
 
 /* body{
@@ -63,8 +64,8 @@
 }
 
 .main-footer > iframe {
-    width: calc(1024px - 215px);
-    height: calc(765px - 65px - 29px - 20px);
+    width: 100%;
+    height: 100%;
     /* background-color: purple;  */
 }
 
